<resources>
    <string name="app_name">SmartPolutanTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="textview">TextView</string>
    <string name="titleapp">Polutan Tracker</string>
    <string name="titlenode1">Page Node1</string>
    <string name="titlenode2">Page Node2</string>
    <string name="titlenode3">Page Node3</string>
    <string name="titlenode4">Page Node4</string>
    <string name="titlenode5">Page Node5</string>
    <string name="impedance">Impedance</string>
    <string name="node1">Node1</string>
    <string name="node2">Node2</string>
    <string name="node3">Node3</string>
    <string name="node4">Node4</string>
    <string name="node5">Node5</string>
    <string name="satuan">kOhm</string>
    <string name="hitung">0</string>
    <string name="real">Real</string>
    <string name="header">Smart Polutan Tracker</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="imaginer">Imaginer</string>
    <string name="magnitude">Magnitude</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="Fasa">Fasa</string>
    <string name="rssi">RSSI</string>
    <string name="snr">SNR</string>
    <string name="polutan">Polutan</string>
    <string name="download">Download Data</string>
    <string name="title_activity_page_node1">PageNode1</string>
    <string name="title_activity_page_node2">PageNode2</string>
    <string name="title_activity_page_node3">PageNode3</string>
    <string name="title_activity_page_node4">PageNode4</string>
    <string name="title_activity_page_node5">PageNode5</string>
    <string name="title_activity_maps_node1">Map</string>
</resources>
